--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 
 body{
-	margin:0;
 	padding:0;
 	font-family: 'Raleway', sans-serif;
 	overflow-x: hidden;
@@ -85,7 +84,7 @@ body{
 	width:30%;
 	min-width:250px;
 	height:45px;
-	border-radius:40px;
+
 	border:1px solid black;
 	padding-left: 5px;
 	outline:0;
@@ -102,7 +101,7 @@ body{
 	color:white;
 	caret-color:white;
 	border:1px solid white;
-	background-color: #292323;
+	background-color: #342c2c;
 	background-image: none;
 }
 
@@ -137,6 +136,7 @@ body{
 	padding-left: 1%;
 	border:2px solid #292323;
 	box-sizing: content-box;
+	transition-duration: 1s;
 }
 
 .product-section .product img{
@@ -148,6 +148,12 @@ body{
 	display: flex;
 	justify-content: space-between;
 	width:100%;
+}
+
+.product:hover{
+	color:white;
+	background-color: #342c2c;
+	cursor:pointer;
 }
 
 
@@ -183,7 +189,7 @@ body{
 
 	/* Product changes */
 	.product-section .product{
-		width:45%;
+		width:65%;
 	}
 
 	/* Search section changes */
