--- a/css/style_index.css
+++ b/css/style_index.css
@@ -60,6 +60,7 @@ body {
 .panel {
     display: flex;
     flex-flow: column;
+    margin-top: 50px;
 }
 
 
@@ -167,15 +168,43 @@ body {
     border:1px solid black;
 }
 
-.modal {
+.modals {
     max-width: 475px;
     display: none;
     margin: 0 auto;
+    z-index: 0;
 }
 
-.modal.open {
+.modals.open {
+    position: relative;
     display: block;
-    margin: 0 auto;
+    top:30%;
+    width: 475px;
+}
+
+.modal-container{
+    background-color:#000000a1;
+    width:100%;
+    height:100%;
+    z-index: 1;
+    position:absolute;
+    display: none;
+}
+
+.modal-container.open{
+    display: block;
+}
+
+.modals label {
+    font-weight: bold;
+}
+
+.modals input {
+    margin-bottom: 8px;
+}
+
+.modals textarea {
+    resize: none;
 }
 
 img {
@@ -211,65 +240,26 @@ img {
 
 /* start of desktop styles */
 
-    .col-1 {width: 8.33%;}
-    .col-2 {width: 16.66%;}
-    .col-3 {width: 25%;}
-    .col-4 {width: 33.33%;}
-    .col-5 {width: 41.66%;}
-    .col-6 {width: 50%;}
-    .col-7 {width: 58.33%;}
-    .col-8 {width: 66.66%;}
-    .col-9 {width: 75%;}
-    .col-10 {width: 83.33%;}
-    .col-11 {width: 91.66%;}
-    .col-12 {width: 100%;}
 
 @media screen and (max-width: 991px) {
 /* start of large tablet styles */
 
-    .col-lt-1 {width: 8.33%;}
-    .col-lt-2 {width: 16.66%;}
-    .col-lt-3 {width: 25%;}
-    .col-lt-4 {width: 33.33%;}
-    .col-lt-5 {width: 41.66%;}
-    .col-lt-6 {width: 50%;}
-    .col-lt-7 {width: 58.33%;}
-    .col-lt-8 {width: 66.66%;}
-    .col-lt-9 {width: 75%;}
-    .col-lt-10 {width: 83.33%;}
-    .col-lt-11 {width: 91.66%;}
-    .col-lt-12 {width: 100%;}
 
 }
 
 @media screen and (max-width: 767px) {
 /* start of medium tablet styles */
-    .col-t-1 {width: 8.33%;}
-    .col-t-2 {width: 16.66%;}
-    .col-t-3 {width: 25%;}
-    .col-t-4 {width: 33.33%;}
-    .col-t-5 {width: 41.66%;}
-    .col-t-6 {width: 50%;}
-    .col-t-7 {width: 58.33%;}
-    .col-t-8 {width: 66.66%;}
-    .col-t-9 {width: 75%;}
-    .col-t-10 {width: 83.33%;}
-    .col-t-11 {width: 91.66%;}
-    .col-t-12 {width: 100%;}
+
 }
 
 @media screen and (max-width: 479px) {
 /* start of phone styles */
-    .col-m-1 {width: 8.33%;}
-    .col-m-2 {width: 16.66%;}
-    .col-m-3 {width: 25%;}
-    .col-m-4 {width: 33.33%;}
-    .col-m-5 {width: 41.66%;}
-    .col-m-6 {width: 50%;}
-    .col-m-7 {width: 58.33%;}
-    .col-m-8 {width: 66.66%;}
-    .col-m-9 {width: 75%;}
-    .col-m-10 {width: 83.33%;}
-    .col-m-11 {width: 91.66%;}
-    .col-m-12 {width: 100%;}
+    .modals.open {
+        position: relative;
+        display: block;
+        top:10%;
+        margin: 0 auto;
+        width: 98%;
+        max-width: 475px;
+    }
 }
