--- a/css/style.css
+++ b/css/style.css
@@ -117,9 +117,17 @@ body{
 
 
 /* Product section */
+.page{
+	position: relative;
+	min-height:100vh;
+}
+
+.main-section{
+	padding-bottom: 120px;
+}
+
 .product-section{
 	width:90%;
-
 	margin:auto;
 	display: flex;
 	justify-content: center;
@@ -128,8 +136,11 @@ body{
 }
 
 .product-section .product{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 	text-align: center;
-	width:20%;
+	width:25%;
 	padding-top:20px;
 	margin-top:20px;
 	margin-right:10px;
@@ -141,13 +152,20 @@ body{
 	transition-duration: 1s;
 }
 
+.product-section .product h2{
+	word-wrap: break-word;
+}
+
 .product-section .product img{
+	flex-direction: row;
+	align-self: center;
 	width:170px;
 	height:150px;
 }
 
 .product-section .bottom-text{
 	display: flex;
+	flex-direction: row;
 	justify-content: space-between;
 	width:100%;
 }
@@ -174,8 +192,10 @@ body{
 
 /* Footer section */
 .classic-footer{
-	margin-top:50px;
 	background-color: #292323;
+	width:100%;
+	position:absolute;
+	bottom:0;
 }
 
 .classic-footer p{
@@ -193,9 +213,10 @@ body{
 @media screen and (max-width: 991px) {
 	/* start of large tablet styles */
 
+
 	/* Product changes */
 	.product-section .product{
-		width:25%;
+		width:35%;
 	}
 }
 
