--- a/css/style.css
+++ b/css/style.css
@@ -117,9 +117,17 @@ body{
 
 
 /* Product section */
+.page{
+	position: relative;
+	min-height:100vh;
+}
+
+.main-section{
+	padding-bottom: 120px;
+}
+
 .product-section{
 	width:90%;
-
 	margin:auto;
 	display: flex;
 	justify-content: center;
@@ -128,8 +136,11 @@ body{
 }
 
 .product-section .product{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 	text-align: center;
-	width:20%;
+	width:25%;
 	padding-top:20px;
 	margin-top:20px;
 	margin-right:10px;
@@ -139,15 +150,24 @@ body{
 	border:2px solid #292323;
 	box-sizing: content-box;
 	transition-duration: 1s;
+	text-decoration: none;
+	color: black;
+}
+
+.product-section .product h2{
+	word-wrap: break-word;
 }
 
 .product-section .product img{
+	flex-direction: row;
+	align-self: center;
 	width:170px;
 	height:150px;
 }
 
 .product-section .bottom-text{
 	display: flex;
+	flex-direction: row;
 	justify-content: space-between;
 	width:100%;
 }
@@ -156,6 +176,37 @@ body{
 	color:white;
 	background-color: #342c2c;
 	cursor:pointer;
+}
+
+
+.single-product{
+	width:50%;
+	margin:auto;
+	text-align: center;
+	margin-top:30px;
+}
+
+.single-product img{
+	width:40%;
+}
+
+.single-product .desc{
+	width:80%;
+	margin:auto;
+	font-size:22px;
+}
+
+.single-product .bottom-text{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	font-size: 35px;
+}
+
+.align-center{
+	text-align:center;
+	margin-top: 50px;
+	font-size: 25px;
 }
 
 /* Link Section */
@@ -174,8 +225,10 @@ body{
 
 /* Footer section */
 .classic-footer{
-	margin-top:50px;
 	background-color: #292323;
+	width:100%;
+	position:absolute;
+	bottom:0;
 }
 
 .classic-footer p{
@@ -193,9 +246,10 @@ body{
 @media screen and (max-width: 991px) {
 	/* start of large tablet styles */
 
+
 	/* Product changes */
 	.product-section .product{
-		width:25%;
+		width:35%;
 	}
 }
 
