--- a/css/style_index.css
+++ b/css/style_index.css
@@ -11,45 +11,48 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-margin: 0;
-padding: 0;
-border: 0;
-vertical-align: baseline;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-display: block;
+    display: block;
 }
 body {
-line-height: 1;
+    line-height: 1;
 }
 ol, ul {
-list-style: none;
+    list-style: none;
 }
 blockquote, q {
-quotes: none;
+    quotes: none;
 }
 blockquote:before, blockquote:after,
 q:before, q:after {
-content: '';
-content: none;
+    content: '';
+    content: none;
 }
 table {
-border-collapse: collapse;
-border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
-
-
-
-@import url('https://fonts.googleapis.com/css?family=Quicksand');
 
 * {
     box-sizing: border-box;
 }
 
-body {
-  font-family: 'Quicksand', sans-serif;
+@font-face {
+	font-family: 'OpenSans';
+	src: url("fonts/OpenSans-Regular.ttf") format('truetype');
+}
+
+body{
+	font-family: 'OpenSans', Arial, Helvetica, sans-serif;
+	padding:0;
+	overflow-x: hidden;
 }
 
 .center {
@@ -301,7 +304,6 @@ img {
     .col-t-10 {width: 83.33%;}
     .col-t-11 {width: 91.66%;}
     .col-t-12 {width: 100%;}
-
 }
 
 
@@ -329,4 +331,225 @@ img {
         width: 98%;
         max-width: 475px;
     }
+}
+
+/* CSS style navigation bar + links */
+.img-logo-nav {
+  width: 350px;
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 5px 30px;
+}
+
+.navbar-light {
+  background-color: #fff !important;
+}
+
+.navbar-nav {
+  margin-right: 100px;
+  padding:0;
+}
+
+.navbar-light .navbar-nav .nav-link {
+  margin-right: 50px;
+}
+
+.navbar-light .navbar-nav .nav-link {
+  padding-right: 25px;
+  color: #000;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 600;
+}
+
+/* Title bar */
+.page-title-bar {
+  background-color: #342c2c;
+  padding: 17px 20px;
+}
+
+.page-title-bar h1 {
+  text-align: center;
+  color: #fff;
+  font-size: 28px;
+  font-weight: 500;
+  letter-spacing: 0.5px;
+  line-height: 28px;
+  margin: 0;
+}
+
+.dropdown-menu {
+  border: 1px solid #7c8c34;
+}
+
+.dropdown-item.active, .dropdown-item:active {
+  background-color: #7c8c34;
+
+}
+
+/* ===== <Catalogue>  =====*/
+
+/* Search section */
+.search-section{
+	text-align: center;
+	margin-top:15px;
+}
+
+.search-section input,.search-section select{
+	width:200px;
+	height:25px;
+}
+.search-section input{
+	font-size:25px;
+	width:30%;
+	min-width:250px;
+	height:45px;
+
+	border:1px solid black;
+	padding-left: 5px;
+	outline:0;
+
+	background-image: url("../icons/magnifying.png");
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position: 99% center;
+}
+
+.search-section input:focus{
+	transition-duration: 1s;
+
+	color:white;
+	caret-color:white;
+	border:1px solid white;
+	background-color: #342c2c;
+	background-image: none;
+}
+
+.search-section p{
+	font-size: 22px;
+}
+
+.search-section select{
+	font-size: 20px;
+	width:220px;
+	height:30px;
+}
+
+
+/* Product section */
+.product-section{
+	width:90%;
+
+	margin:auto;
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	box-sizing: content-box;
+}
+
+.product-section .product{
+	text-align: center;
+	width:20%;
+	padding-top:20px;
+	margin-top:20px;
+	margin-right:10px;
+	margin-left:10px;
+	padding-right:1%;
+	padding-left: 1%;
+	border:2px solid #292323;
+	box-sizing: content-box;
+	transition-duration: 1s;
+}
+
+.product-section .product img{
+	width:170px;
+	height:150px;
+}
+
+.product-section .bottom-text{
+	display: flex;
+	justify-content: space-between;
+	width:100%;
+}
+
+.product:hover{
+	color:white;
+	background-color: #342c2c;
+	cursor:pointer;
+}
+
+/* Link Section */
+.link-page-box{
+	display: block;
+	width:100%;
+	text-align: center;
+	padding-top:20px;
+}
+
+.link-page-box a{
+	margin-right:5px;
+	margin-left:5px;
+	font-size:25px;
+}
+
+/* Footer section */
+.classic-footer{
+	margin-top:50px;
+	background-color: #292323;
+}
+
+.classic-footer p{
+	text-align: center;
+	color:white;
+	margin:0;
+	padding-top:40px;
+	padding-bottom:40px;
+}
+
+/* === </Catalogue> === */
+
+@media screen and (max-width: 991px) {
+	/* start of large tablet styles */
+
+	/* Product changes */
+	.product-section .product{
+		width:25%;
+	}
+    
+    .navbar-light .navbar-nav .nav-link {
+        margin-right: 0;
+    }
+}
+
+@media screen and (max-width: 768px) {
+	/* start of medium tablet styles */
+
+	/* Product changes */
+	.product-section .product{
+		width:65%;
+	}
+
+	/* Search section changes */
+	.search-section p{
+		display: block;
+    }
+    
+}
+
+@media screen and (max-width: 425px) {
+	/* start of phone styles */
+	body{
+		background-color: green;
+	}
+
+	/* Product section changes */
+	.product-section{
+		width:100%;
+	}
+
+	.product-section .product{
+		width:70%;
+	}
+
 }
