--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ body{
 
 }
 
-/* ===== <Catalogue>  =====*/
+/* ===== <Catalog>  =====*/
 
 /* Search section */
 .search-section{
@@ -280,7 +280,43 @@ body{
 	padding-bottom:40px;
 }
 
-/* === </Catalogue> === */
+/* === </Catalog> === */
+
+
+
+/* Payment page */
+.payment-form{
+	display: flex;
+	align-items: center;
+	border:1px solid black;
+	width:30%;
+	margin:auto;
+	flex-direction: column;
+	text-align: center;
+	padding-top:50px;
+	padding-bottom:50px;
+}
+
+.payment-form input{
+	width:300px;
+	height:30px;
+	font-size:25px;
+	font-family: 'Raleway', sans-serif;
+	border:0;
+	border-bottom:2px solid black;
+	outline:0;
+}
+
+.payment-form label{
+	display: block;
+	margin-top:10px;
+}
+
+.payment-form button{
+	width:200px;
+	margin:auto;
+	margin-top:100px;
+}
 
 
 
