--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,412 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway');
-
-body{
-	padding:0;
-	font-family: 'Raleway', sans-serif;
-	overflow-x: hidden;
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    vertical-align: baseline;
 }
 
-/* Nav bar */
-.navbar{
-	padding-bottom: 0;
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+    display: block;
 }
 
-/* CSS style navigation bar + links */
+body {
+    line-height: 1;
+}
+
+ol, ul {
+    list-style: none;
+}
+
+blockquote, q {
+    quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+a {
+    text-decoration: none;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+@font-face {
+	font-family: 'OpenSans';
+	src: url("fonts/OpenSans-Regular.ttf") format('truetype');
+}
+
+body {
+	font-family: 'OpenSans', Arial, Helvetica, sans-serif;
+}
+
+/* Inventory page CSS */
+.center {
+  max-width: 1300px;
+  margin: 0 auto;
+}
+
+.panel {
+    display: flex;
+    flex-flow: column;
+    margin-top: 50px;
+}
+
+.panel-header {
+    flex: 0 1 40px;
+    background-color: #ecf0f1;
+    border: 2px solid #bdc3c7;
+    color: black;
+    padding: 8px;
+}
+
+.panel-header h1,h2,h3,h4,h5,h6 {
+    text-align:center;
+    padding: 0;
+    margin: 0;
+    font-weight: bold;
+}
+
+.panel-body {
+    background-color: #fbfbfb;
+    border: 2px solid #bdc3c7;
+    border-top: none;
+    padding: 10px;
+}
+
+.full .panel-body{
+    flex: 1 1 auto;
+}
+
+.default {
+    color: black;
+    background-color: #bdc3c7;
+    border: 2px solid #7f8c8d;
+}
+
+.delete {
+    color: white;
+    background-color: #e74c3c;
+    border: 2px solid #c0392b;
+}
+
+.edit {
+    color: white;
+    background-color: #3498db;
+    border: 2px solid #2980b9;
+}
+
+.add {
+    color: white;
+    background-color: #2ecc71;
+    border: 2px solid #27ae60;
+}
+
+.manager-button.delete:hover {
+    background-color: #c0392b;
+}
+
+.manager-button.edit:hover {
+    background-color: #2980b9;
+}
+
+.manager-button.add:hover {
+    background-color: #27ae60;
+}
+
+.manager-buttons-div{
+    min-height: 50px;
+    display: block;
+    width: 100%;
+}
+
+.manager-button {
+    width: 45px;
+    height: 45px;
+    padding: 5px;
+    display: inline-block;
+    float: right;
+    margin-right: 2px;
+    margin-left: 2px;
+}
+
+.manager-button.disabled {
+    opacity: 0.5;
+}
+
+.manager-button.disabled:hover {
+    cursor: default;
+}
+
+.manager-button:hover{
+    cursor: pointer;
+}
+
+.manager-button img{
+    display: block;
+    margin: auto;
+}
+
+.inventory-manager-table{
+    display: block;
+    overflow: scroll;
+    overflow-y: hidden;
+}
+
+.inventory-manager-table table {
+    width: 100%;
+    margin-top: 10px;
+}
+
+.inventory-manager-table thead {
+    background-color: #ececec;
+    font-weight: bold;
+}
+
+.inventory-manager-table td {
+    padding:5px;
+    text-align: center;
+    border:1px solid black;
+}
+
+.inventory-manager-table td img {
+    width: 60px;
+    height: 60px;
+}
+
+.modals {
+    max-width: 475px;
+    display: none;
+    margin: 0 auto;
+    z-index: 0;
+}
+
+.modals.open {
+    position: relative;
+    display: flex;
+    top:5%;
+    max-width: 475px;
+}
+
+.modal-container{
+    background-color:#000000a1;
+    width:100%;
+    height:100%;
+    z-index: 1;
+    position:absolute;
+    display: none;
+}
+
+.modal-container.open{
+    display: block;
+}
+
+.modals label {
+    font-weight: bold;
+}
+
+.modals input {
+    margin-bottom: 12px;
+    padding-right: 1px;
+    padding-left: 1px;
+    display: block;
+}
+
+.modals textarea {
+    resize: none;
+    padding-right: 1px;
+    padding-left: 1px;
+    margin-bottom: 12px;
+}
+
+.modals select{
+    height: 30px;
+    margin-bottom: 8px;
+    padding-right: 1px;
+    padding-left: 1px;
+}
+
+.modals input[type="checkbox"]{
+    display: inline-block;
+    margin-left: 15px;
+}
+
+a.file-btn{
+    display: inline-block;
+    background-color: #bdc3c7;
+    padding: 3px;
+    float:right;
+    text-align: center;
+}
+
+a.addProd-btn{
+    padding: 5px;
+    font-size: 19px;
+    color: white !important;
+    text-align: center;
+    float:right;
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+a.cancel-btn{
+    padding: 5px;
+    font-size: 19px;
+    float: right;
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+a[class*="-btn"]:hover{
+    cursor: pointer;
+}
+
+img {
+	/* évite que l'image ne s'agrandisse plus que sa taille maximale*/
+    max-width: 100%;
+    height: auto;
+}
+
+/* For mobile phones: */
+[class*="col-"] {
+    width: 100%;
+    float: left;
+}
+
+@media only screen and (min-width: 600px) {
+
+    /* For tablets: */
+    .col-t-1 {width: 8.33%;}
+    .col-t-2 {width: 16.66%;}
+    .col-t-3 {width: 25%;}
+    .col-t-4 {width: 33.33%;}
+    .col-t-5 {width: 41.66%;}
+    .col-t-6 {width: 50%;}
+    .col-t-7 {width: 58.33%;}
+    .col-t-8 {width: 66.66%;}
+    .col-t-9 {width: 75%;}
+    .col-t-10 {width: 83.33%;}
+    .col-t-11 {width: 91.66%;}
+    .col-t-12 {width: 100%;}
+}
+
+
+/* start of desktop styles */
+
+
+@media screen and (max-width: 991px) {
+/* start of large tablet styles */
+
+
+}
+
+@media screen and (max-width: 767px) {
+/* start of medium tablet styles */
+
+}
+
+@media screen and (max-width: 479px) {
+/* start of phone styles */
+    .modals.open {
+        position: relative;
+        display: block;
+        top:5%;
+        margin: 0 auto;
+        width: 98%;
+        max-width: 475px;
+    }
+}
+
+
+/************** My recipes page style **************/
+
+.recipes-wrapper {
+    max-width: 90% !important;
+    margin: 30px auto;
+    padding: 15px 5px;
+    display: flex;
+    flex-direction: column;
+}
+
+.recipes-wrapper a {
+    text-decoration: none;
+    color: #000;
+}
+
+.thead-light {
+    font-weight: 600;
+}
+
+.table td:hover {
+    cursor: pointer;
+}
+
+.recipes-wrapper .btn {
+    margin-bottom: 20px;
+}
+
+.recipes-wrapper .btn-add-recipe {
+    color: #fff;
+    background-color: #bcd13f;
+    border-color: #bcd13f;
+}
+
+.recipes-wrapper .btn-add-recipe.focus,
+.recipes-wrapper .btn-add-recipe:focus {
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(41, 35, 35,.25);
+}
+
+/************** CSS style edit recipe modal ********************/
+.ingredients-list {
+    display: flex;
+    flex-direction: column;
+}
+
+.ingredient-item {
+    display: flex;
+    flex-direction: row;
+    margin-top: 2px;
+}
+
+.label-volume {
+    width: 25%;
+    padding-left: 10px;
+}
+
+.input-volume {
+    width: 25%;
+}
+
+.btn-remove {
+    align-self: flex-end;
+}
+
+/************** CSS style navigation bar + links **************/
+
 .img-logo-nav {
   width: 350px;
   max-width: 100%;
@@ -79,7 +474,6 @@ body{
 	height:25px;
 }
 .search-section input{
-	font-family: "Raleway";
 	font-size:25px;
 	width:30%;
 	min-width:250px;
@@ -115,22 +509,8 @@ body{
 	height:30px;
 }
 
-.search-section #filter{
-	font-family: 'Raleway',sans-serif;
-}
-
 
 /* Product section */
-.page{
-	position: relative;
-	min-height:100vh;
-	background-color: #F8F9FA;
-}
-
-.main-section{
-	padding-bottom: 120px;
-}
-
 .product-section{
 	width:90%;
 	margin:auto;
@@ -141,11 +521,8 @@ body{
 }
 
 .product-section .product{
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
 	text-align: center;
-	width:25%;
+	width:20%;
 	padding-top:20px;
 	margin-top:20px;
 	margin-right:10px;
@@ -155,94 +532,23 @@ body{
 	border:2px solid #292323;
 	box-sizing: content-box;
 	transition-duration: 1s;
-	text-decoration: none;
-	background-color: #342c2c;
-	color: white;
-
-}
-
-.product-section .product h2{
-	word-wrap: break-word;
 }
 
 .product-section .product img{
-	flex-direction: row;
-	align-self: center;
 	width:170px;
 	height:150px;
 }
 
 .product-section .bottom-text{
 	display: flex;
-	flex-direction: row;
 	justify-content: space-between;
 	width:100%;
 }
 
 .product:hover{
-	color:black;
-	background-color: white;	
-	cursor:pointer;
-}
-
-
-.single-product{
-	width:70%;
-	margin:auto;
-	text-align: left;
-	margin-top:30px;
-	background-color: #F8F9FA;
-	border:5px groove #F8F9FA;
-}
-
-.single-product img{
-	width:30%;
-	min-width: 200px;
-	display: inline-block;
-	vertical-align: top;
-	border:5px solid #292323;
-	margin-left:5%;
-	margin-top:5%;
-}
-
-.single-product .desc{
-	width:70%;
-	font-size:22px;
-	display: inline-block;
-	vertical-align: middle;
-	padding-top:50px;
-	margin-left:5%;
-	padding-bottom:50px;
-}
-
-.single-product .side-text{
-	margin-left:20%;
-	margin-top:150px;
-	min-width:20%;
-	display: inline-block;
-	background-color: #342C2C;
 	color:white;
-	padding:20px;
-	font-size: 30px;
-}
-
-.single-product .side-text span{
-	text-align: left;
-	display: block;
-}
-
-.align-center a{
-	color:#bcd13f;
-}
-
-.align-center a:hover{
-	color:#bcd13f;
-}
-
-.align-center{
-	text-align:center;
-	margin-top: 50px;
-	font-size: 25px;
+	background-color: #342c2c;
+	cursor:pointer;
 }
 
 /* Link Section */
@@ -257,19 +563,12 @@ body{
 	margin-right:5px;
 	margin-left:5px;
 	font-size:25px;
-	color:#bcd13f;
-}
-
-.link-page-box:hover a{
-	color:#bcd13f;
 }
 
 /* Footer section */
 .classic-footer{
+	margin-top:50px;
 	background-color: #292323;
-	width:100%;
-	position:absolute;
-	bottom:0;
 }
 
 .classic-footer p{
@@ -282,34 +581,20 @@ body{
 
 /* === </Catalogue> === */
 
-
-
 @media screen and (max-width: 991px) {
 	/* start of large tablet styles */
-	.single-product{
-		text-align: center;
-	}
-
-	.single-product .side-text{
-		display: block;
-		width:50%;
-		margin:auto;
-		margin-top:100px;
-		font-size: 20px;
-	}
-
-	.single-product .desc{
-		margin-top:50px;
-	}
-
 
 	/* Product changes */
 	.product-section .product{
-		width:35%;
+		width:25%;
 	}
+    
+    .navbar-light .navbar-nav .nav-link {
+        margin-right: 0;
+    }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
 	/* start of medium tablet styles */
 
 	/* Product changes */
@@ -320,36 +605,26 @@ body{
 	/* Search section changes */
 	.search-section p{
 		display: block;
-	}
+    }
 
+    /* Recipes list display changes (myrecipes) */
+    .recipes-wrapper {
+        align-items: flex-start;
+        max-width: 100%;
+    }
+    .recipes-wrapper .btn {
+        position: absolute;
+        align-self: flex-start;
+    }
+
+    .recipes-wrapper .table {
+        margin-top: 50px;
+    }
+    /**/
 }
 
-@media screen and (max-width: 479px) {
+@media screen and (max-width: 425px) {
 	/* start of phone styles */
-	body{
-		background-color: green;
-	}
-
-	.single-product{
-		text-align: center;
-		width:95%;
-	}
-
-	.single-product .side-text{
-		display: block;
-		width:80%;
-		margin:auto;
-		margin-top:100px;
-		font-size: 20px;
-	}
-
-	.single-product .desc{
-		text-align: left;
-		padding:0;
-		margin:0;
-		padding-bottom: 50px;
-		margin-top:50px;
-	}
 
 	/* Product section changes */
 	.product-section{
@@ -361,4 +636,3 @@ body{
 	}
 
 }
-
