--- a/css/style.css
+++ b/css/style.css
@@ -330,6 +330,7 @@ body{
 #card-element{
 	width:300px;
 	margin:auto;
+	border-bottom:2px solid black;
 }
 
 @media screen and (max-width: 991px) {
