--- a/css/style_index.css
+++ b/css/style_index.css
@@ -625,7 +625,7 @@ img {
 
 .product:hover{
     color:black;
-    background-color: white;    
+    background-color: white;
     cursor:pointer;
 }
 
@@ -816,7 +816,7 @@ img {
 }
 
 
-.payment-form #province{    
+.payment-form #province{
     border-radius: 1px; /* hides the border */
 }
 
@@ -908,7 +908,7 @@ img {
     .product-section .product{
         width:35%;
     }
-    
+
     .navbar-light .navbar-nav .nav-link {
         margin-right: 0;
     }
@@ -980,24 +980,31 @@ img {
         width:70%;
     }
 
-
+}
 	/* ========Login========*/
-	.loginConnect {
-		display: flex;
-		justify-content: center;
+.login-container{
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+  .loginConnect {
 	  width: 400px;
 	  height: 300px;
 	  border: solid 1px black;
 	}
 
-	input {
+	.loginConnect .input {
 	  width:75%;
 	  max-width:250px;
 	}
 
-	input[type=submit] {
+	.loginConnect .input[type=submit] {
 	  width:75%;
 	  max-width:150px;
 	}
 
-}
+  .loginConnect .label ::before{
+    content: "\a";
+    white-space: pre;
+  }
