--- a/css/style_index.css
+++ b/css/style_index.css
@@ -526,6 +526,14 @@ input:checked + .slider:before {
     align-self: flex-end;
 }
 
+/**** Invalid form input ****/
+.invalid-input {
+    width: 100%;
+    margin-top: .25rem;
+    font-size: 80%;
+    color: #dc3545;
+}
+
 /************** CSS style navigation bar + links **************/
 
 .img-logo-nav {
