--- a/css/style_index.css
+++ b/css/style_index.css
@@ -979,23 +979,44 @@ img {
 }
 	/* ========Login========*/
 .login-container{
+  padding-top: 10%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
   .loginConnect {
-	  width: 400px;
-	  height: 300px;
-	  border: solid 1px black;
+	  max-width: 350px;
+	  height: 150px;
+
 	}
+  .loginConnect form{
+    text-align:center;
+  }
 
 	.loginConnect .input {
 	  width:75%;
 	  max-width:250px;
 	}
+  .loginConnect .loginlbl:after {
+    display:block;
+    white-space: pre;
+    content: "\a";
+	}
 
 	.loginConnect .input[type=submit] {
+	  width:75%;
+	  max-width:200px;
+	}
+
+
+  .loginConnect .loginInput:after {
+    display:block;
+    white-space: pre;
+    content: "\a";
+	}
+
+	.loginConnect .loginSub {
 	  width:75%;
 	  max-width:150px;
 	}
@@ -1004,3 +1025,4 @@ img {
     content: "\a";
     white-space: pre;
   }
+
