--- a/css/style_index.css
+++ b/css/style_index.css
@@ -953,6 +953,18 @@ input:checked + .slider:before {
     margin-top:5px;
 }
 
+#payment-state{
+    text-align: center;
+    font-size:20px;
+}
+
+.payment-success{
+    color:green;
+}
+
+.payment-error{
+    color:red;
+}
 @keyframes animLabel{
 
     0%{
