Payment is now completed and linked to the order's page (#42)
* Changed array order in MgrProduct

* Added XML file, XSD file , XmlValidator and DbInitializer

* fixed single node error because it was not in an array

* Added PHP doc, and changed files paths

* Added tables to the xml file

* Added regex to stdf

* Changed verif.xsd

* Entirely refactored the XmlValidator

* Added data to the XML file

* Added Stripe and Payment now works completly.

* Added Payment error management and now works with an ajax call

* Deleted files and added a line

* Mgr and Ctrl order payment now working with order Id instead of oobject

* Added some stuff

* Payment is now completed

* Added seperated js scripts and changed query engine in MgrCategory

--- a/css/style_index.css
+++ b/css/style_index.css
@@ -612,7 +612,6 @@ input:checked + .slider:before {
     border:1px solid black;
     padding-left: 5px;
     outline:0;
-    background-image: url("../icons/magnifying.png");
     background-repeat: no-repeat;
     background-size: contain;
     background-position: 99% center;
@@ -955,7 +954,7 @@ input:checked + .slider:before {
 
 #payment-state{
     text-align: center;
-    font-size:20px;
+    font-size:30px;
 }
 
 .payment-success{
@@ -965,6 +964,17 @@ input:checked + .slider:before {
 .payment-error{
     color:red;
 }
+
+
+.infos-client{
+    text-align: center;
+    font-size:30px;
+}
+
+.link-previous{
+    text-align: center;
+}
+
 @keyframes animLabel{
 
     0%{
