--- a/css/style_index.css
+++ b/css/style_index.css
@@ -312,11 +312,11 @@ body{
 
 /* Actual File Input. Hidden */
 #product_image{
-    height:28px;
+    height:100%;
+    width:77px;
     opacity: 0;
     z-index: 9999;
     position: absolute;
-    right:7px;
 }
 
 .addProd-btn{
