--- a/css/style_index.css
+++ b/css/style_index.css
@@ -533,12 +533,11 @@ input:checked + .slider:before {
     color: #dc3545;
 }
 
-#confirmationModal {
-    z-index: 9999;
-}
+/************** Estimation modal style *****************/
 
-.modal-backdrop:nth-child(2n) {
-    z-index: 5000;
+.disabled-input {
+    border: none !important;
+    background-color: #fff !important;
 }
 
 /************** CSS style navigation bar + links **************/
